@startuml
'https://plantuml.com/class-diagram
@startuml
hide methods
' ======= layout =========
skinparam backgroundColor #fcf9ea
skinparam titleBorderRoundCorner 15
skinparam titleFontSize 30
skinparam classAttributeIconSize 0
skinparam titleFontName Arial Black
skinparam titleFontColor #f8a978
skinparam roundcorner 20
skinparam stereotypeCBackgroundColor ffc5a1
skinparam class {

ArrowColor ffc5a1
BorderColor White
BackgroundColor badfdb
}


' ======= title =========
center header


<font color=Black size=15><b>Built by WeByte ©</font>
endheader
title <b>DOMAIN MODEL\n


class Employee{
- username
- employeeId
- organizationRole
- name
- address
- phoneNumber
- e-Mail
- socCode
}

class MedicalLabTechnician{
- laboratoryId;
- name;
- address;
- phoneNumber;
- tinnumber
}

class Sample{
- barcode
}

class TestSampleParameterResult{
- value
}

class Test{
- code
- nhsCode
- createdAt
}

class TestType{
- code
- description
- collecting method
}

Test "1" -- "*" TestType : is of >
Test "1" -- "*" Sample : collects >
TestSampleParameterResult "*" -- "1" Sample : obtained through >
Sample "*" -- "1" MedicalLabTechnician : are analyzed by >
MedicalLabTechnician "*" -- "1" Employee : is rolled as >
MedicalLabTechnician "*" -- "1" TestSampleParameterResult : records >


@enduml